# bba

./: Cargo.toml  README.markdown
src/: bba.rs  bba_init_proof.rs  bba_open_proof.rs  bba_serde.rs  bba_update_proof.rs  lib.rs  main.rs  proof_system.rs  schnorr.rs
