[package]
name = "bba_lib"
version = "0.1.0"
authors = ["Izaak Meckler <ihmeckler@gmail.coom>", "gpestana <g6pestana@gmail.com>"]
edition = "2021"

[dependencies]
oracle = { path = "./../proof-systems/oracle" }
groupmap = { path = "./../proof-systems/groupmap" }
algebra = { path = "./../zexe/algebra", features = [ "parallel", "pasta", "asm" ] }
commitment_dlog = { path = "./../proof-systems/dlog/commitment" }
plonk_protocol_dlog = { path = "./../proof-systems/dlog/plonk" }
plonk_circuits = { path = "./../proof-systems/circuits/plonk" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bincode = "1.3.3"

ff-fft = { path = "./../zexe/ff-fft" }
rand_core = "0.6.0"
array-init = "0.1.1"

rayon = { version = "1" }

ark-serialize = "0.3.0"
ark-ff = { version = "0.3.0", features = [ "parallel", "asm" ] } 
ark-ec = { version = "0.3.0", features = [ "parallel" ] } 
